--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,15 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body, html {
-  height: 100%;
-  overflow: hidden;
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 canvas {
-  display: block;
-  background-color: black;
-  width: 100%;
-  height: 100%;
+    background: #000;
+    display: block;
+    border: 2px solid #fff;
 }
