--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* style.css */
 body {
     margin: 0;
     overflow: hidden;
@@ -7,27 +6,6 @@ body {
 
 canvas {
     display: block;
-    margin: 0 auto;
-    background-color: black;
-}
-
-#gameOverScreen {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
-    display: none;
-}
-
-#gameOverScreen h1 {
-    font-size: 50px;
-    margin-bottom: 20px;
-}
-
-#gameOverScreen button {
-    padding: 10px 20px;
-    font-size: 20px;
-    cursor: pointer;
+    background: url('space-background.jpg') no-repeat center center;
+    background-size: cover;
 }
