--- a/style.css
+++ b/style.css
@@ -48,3 +48,9 @@ button:hover {
   font-size: 1.2em;
   text-align: center;
 }
+#timeDisplay {
+  font-size: 1.5em;
+  color: red;
+  text-align: center;
+  margin-bottom: 10px;
+}
