--- a/style.css
+++ b/style.css
@@ -1,56 +1,17 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+    text-align: center;
+    font-family: sans-serif;
+    background-color: #000;
+    color: #fff;
 }
 
-.login-container, .register-container, .game-container {
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
+canvas {
+    border: 2px solid white;
+    display: block;
+    margin: 0 auto;
+    background-color: #1e1e1e;
 }
 
-h2 {
-  text-align: center;
-}
-
-input {
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-}
-
-button {
-  width: 100%;
-  padding: 10px;
-  background-color: #007BFF;
-  color: white;
-  border: none;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-#error-message {
-  color: red;
-  text-align: center;
-}
-
-#scoreDisplay {
-  font-size: 1.2em;
-  text-align: center;
-}
-#timeDisplay {
-  font-size: 1.5em;
-  color: red;
-  text-align: center;
-  margin-bottom: 10px;
+#gameInfo {
+    margin-top: 10px;
 }
